<resources>
    <string name="app_name">Module1MP</string>
    <string name="page_title">YOKOTO</string>
    <string name="search">Search</string>
    <string name="toolbar_men">Men</string>
    <string name="toolbar_women">Women</string>
    <string name="toolbar_kids">Kids</string>
    <string name="toolbar_lifestyle">Lifestyle</string>
    <string name="sale">sale</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="category_image">Category image</string>
</resources>